fix scrollbars

--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@ body * {
 
 body {
 	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	border: 0;
 }
 
 div.main-container {
